--- a/css/styles.css
+++ b/css/styles.css
@@ -72,3 +72,8 @@ body {
     display: inline-block;
     border-radius: 25px;
 }
+#scriptsContainer {
+    height: fit-content;
+    width: fit-content;
+    float: right;
+}
